# movie-ticket-console

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.ps1  final-khaitam.c  main.c  uc02.c  uc04.c
data/: movie.csv  screening.csv  ticket.csv  tickets.csv  user.csv
include/: constanst.h
include/models/: movie.h  screening.h  ticket.h  user.h
include/repos/: movie_repo.h  screening_repo.h  ticket_repo.h  user_repo.h
include/services/: auth.h  customer_services.h  manager_services.h  movie_services.h  screening_services.h
include/utils/: csv_utils.h  decision_utils.h  get_temp_file_path.h  input_utils.h  menu.h  show_actions_menu.h
models/: showtime.c  showtime.h  ticket.c  ticket.h
project/: globals.c  globals.h
screens/: cancel_screen.c  cancel_screen.h  history_screen.c  history_screen.h  menu_screen.c  menu_screen.h  seat_screen.c  seat_screen.h  service_screen.c  service_screen.h  showtime_screen.c  showtime_screen.h
src/: main.c
src/repos/: movie_repo.c  screening_repo.c  ticket_repo.c  user_repo.c
src/services/: auth.c  customer_services.c  manager_services.c  movie_services.c  screening_services.c
src/utils/: csv_utils.c  decision_utils.c  get_temp_file_path.c  input_utils.c  menu.c  show_actions_menu.c
utils/: file_utils.h  input_utils.c  input_utils.h  seat_utils.c  seat_utils.h  ui_utils.c  ui_utils.h
